--- a/test/package.xml
+++ b/test/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>总装</name>
+  <name>test</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for 总装</p>
+    <p>URDF Description package for test</p>
     <p>This package contains configuration data, 3D models and launch files
-for 总装 robot</p>
+for test robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
